<resources>
    <string name="epubactivity_drm_info">DRM Info</string>
    <string name="epubactivity_set_bookmark">Add a bookmark</string>
    <string name="epubactivity_settings">User Settings</string>
    <string name="epubactivity_book_nav_options">Book navigation menu</string>
    <string name="epubactivity_read_aloud_start">Read Aloud</string>
    <string name="epubactivity_search">Search</string>
    <string name="title_fragment_drm_management">DRM Management</string>
    <string name="more_options">More Options</string>
    <string name="popup_delete_button">DELETE</string>
    <string name="app_version_header">Version</string>
    <string name="app_version_label">App Version:</string>
    <string name="app_version">0.0.01</string>
    <string name="github_tab_label">GitHub Tag:</string>
    <string name="github_tag">0.0.01</string>
    <string name="copyright_label">Copyright</string>
    <string name="copyright">\@ 2025 </string>
    <string name="bsd_license_label">[BSD-3 license]</string>
    <string name="bsd_license_label_accessible">[B S D 3 license]</string>
    <string name="acknowledgements_label">Acknowledgements</string>
    <string name="acknowledgements_french_state">This application is built using the following open-source libraries:

<b>Reading &amp; Media:\n</b>
• Readium Kotlin Toolkit - EPUB and audiobook support
• ExoPlayer (via Media3) - Audio playback
• FFmpeg Kit - Audio processing and format conversion

<b>Machine Learning:</b>
• TensorFlow Lite - On-device speech recognition and ML inference

<b>Android Framework:</b>
• AndroidX Libraries - Core Android components
• Jetpack Compose - Modern UI toolkit
• Room Database - Local data persistence
• Material Design Components - UI components
• Navigation Component - App navigation
• DataStore - Preferences storage
• WebKit - Web content rendering

<b>Utilities:</b>
• Timber - Logging
• Picasso - Image loading
• Kotlinx Coroutines - Asynchronous programming
• Java String Similarity - Text comparison algorithms
• Jsoup - HTML parsing
• Joda-Time - Date and time handling

We thank all the maintainers and contributors of these excellent open-source projects.</string>
    <string name="catalog_list_more">More</string>
    <string name="catalog_detail_download_button">Download</string>
    <string name="Instructions">Acknowledgements</string>
    <string name="instructions_title">How to Use</string>
<string name="instructions_step1_title"><b>1. Import eBook, then Audiobook:</b></string>
<string name="instructions_step1_line1">Open the app and tap on the Import (+) button.</string>
<string name="instructions_step1_line2">Select a .epub file (<b>eBook must be selected FIRST</b>) and then when you open it, select the corresponding audiobook from your device storage.</string>
<string name="instructions_step2_title"><b>2. Start The Audiobook at your desired Position:</b></string>
<string name="instructions_step2_line1">Go to the position of the EPUB that corresponds to the Audiobook</string>
<string name="instructions_step2_line2">Tap on the Anchor button to start transcribing the audiobook and anchor the audio to the text.</string>
<string name="instructions_step2_line3">The app will process the audio and move the EPUB with the corresponding text in the book.</string>
<string name="instructions_step2_line4">Once transcription is complete, the app will automatically sync the text with the eBook.</string>
<string name="instructions_step2_line5">You can now switch between listening and reading seamlessly.</string>
<string name="instructions_step3_title"><b>3. Read and Listen:</b></string>
<string name="instructions_step3_line1">Use the built-in reader to read the eBook while listening to the audiobook.</string>
<string name="instructions_step3_line2">The app will highlight the text as the audio plays for a synchronized experience.</string>
<string name="acknowledgements_intro">This application is built using the following open-source libraries:</string>
<string name="acknowledgements_reading_media_header"><b>Reading &amp; Media:</b></string>
<string name="acknowledgements_readium">• Readium Kotlin Toolkit - EPUB and audiobook support</string>
<string name="acknowledgements_exoplayer">• ExoPlayer (via Media3) - Audio playback</string>
<string name="acknowledgements_ffmpeg">• FFmpeg Kit - Audio processing and format conversion</string>
<string name="acknowledgements_ml_header"><b>Machine Learning:</b></string>
<string name="acknowledgements_tensorflow">• TensorFlow Lite - On-device speech recognition and ML inference</string>
<string name="acknowledgements_android_header"><b>Android Framework:</b></string>
<string name="acknowledgements_androidx">• AndroidX Libraries - Core Android components</string>
<string name="acknowledgements_compose">• Jetpack Compose - Modern UI toolkit</string>
<string name="acknowledgements_room">• Room Database - Local data persistence</string>
<string name="acknowledgements_material">• Material Design Components - UI components</string>
<string name="acknowledgements_navigation">• Navigation Component - App navigation</string>
<string name="acknowledgements_datastore">• DataStore - Preferences storage</string>
<string name="acknowledgements_webkit">• WebKit - Web content rendering</string>
<string name="acknowledgements_utilities_header"><b>Utilities:</b></string>
<string name="acknowledgements_timber">• Timber - Logging</string>
<string name="acknowledgements_picasso">• Picasso - Image loading</string>
<string name="acknowledgements_coroutines">• Kotlinx Coroutines - Asynchronous programming</string>
<string name="acknowledgements_string_similarity">• Java String Similarity - Text comparison algorithms</string>
<string name="acknowledgements_jsoup">• Jsoup - HTML parsing</string>
<string name="acknowledgements_joda">• Joda-Time - Date and time handling</string>
<string name="acknowledgements_thanks">We thank all the maintainers and contributors of these excellent open-source projects.</string>
    <string name="drm_information_header">INFORMATION</string>
    <string name="drm_label_license_type">License Type</string>
    <string name="drm_label_state">State</string>
    <string name="drm_label_provider">Provider</string>
    <string name="drm_label_issued">Issued</string>
    <string name="drm_label_updated">Updated</string>
    <string name="drm_label_rights">RIGHTS</string>
    <string name="drm_label_prints_left">Prints left</string>
    <string name="drm_label_copies_left">Copies left</string>
    <string name="drm_label_start">Start</string>
    <string name="drm_label_end">End</string>
    <string name="drm_label_actions">ACTIONS</string>
    <string name="drm_label_renew">RENEW</string>
    <string name="drm_label_return">RETURN</string>
    <string name="zero">00:00</string>
    <string name="chapter_page">Chapter / Page</string>
    <string name="progression">Progression</string>
    <string name="timestamp">Timestamp</string>
    <string name="contents_tab_label">Contents</string>
    <string name="bookmarks_tab_label">Bookmarks</string>
    <string name="highlights_tab_label">Highlights</string>
    <string name="pagelist_tab_label">Page List</string>
    <string name="landmarks_tab_label">Landmarks</string>
    <string name="action_mode_menu_highlight">Highlight</string>
    <string name="action_mode_menu_underline">Underline</string>
    <string name="action_mode_menu_note">Note</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_exists">Bookmark already exists</string>
    <string name="title_catalogs">Catalogs</string>
    <string name="title_bookshelf">Bookshelf</string>
    <string name="title_about">About</string>
    <string name="cover_image">Cover Image</string>
    <string name="repfr">repfr</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_book_title">Delete Book?</string>
    <string name="confirm_delete_book_text">Are you sure you want to delete this book?</string>
    <string name="confirm_delete_catalog_title">Delete Catalog?</string>
    <string name="confirm_delete_catalog_text">Are you sure you want to delete this Catalog feed?</string>
    <string name="add_book">Add a Book</string>
    <string name="add_catalog">Add an Catalog Feed</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="enter_title">Enter the Title</string>
    <string name="enter_url">Enter the URL</string>
    <string name="invalid_title">Please enter a title</string>
    <string name="invalid_url">Please enter a valid URL</string>
    <string name="catalog_parse_error">Error parsing Catalog feed. Please check the URL and try again</string>
    <string name="return_publication">This will return the publication</string>
    <string name="return_button">Return</string>
    <string name="opening_publication_cannot_render">Cannot render publication.</string>
    <string name="opening_publication_audio_engine_initialization">Could not open publication because audio engine initialization failed.</string>
    <string name="import_publication_unexpected_io_exception">Unable to add publication due to an unexpected error on your device</string>
    <string name="import_publication_download_failed">Publication download failed.</string>
    <string name="import_publication_no_acquisition">Acquisition is not possible.</string>
    <string name="import_publication_success">Publication added to your library</string>
    <string name="import_publication_unable_add_pub_database">Unable to add publication to the database</string>
    <string name="import_publication_inconsistent_state">Import failed because of exceptional conditions. Please try again.</string>
    <string name="publication_error_unsupported_asset">Asset format is not supported</string>
    <string name="publication_error_network_forbidden">Server denied access to a resource.</string>
    <string name="publication_error_network_not_found">A resource has not been found on the server.</string>
    <string name="publication_error_network_unreachable">Server cannot be reached.</string>
    <string name="publication_error_network_timeout">Server was too long to respond.</string>
    <string name="publication_error_network_ssl_handshake">A SSL error occurred.</string>
    <string name="publication_error_network_unexpected">An unexpected network error occurred.</string>
    <string name="publication_error_filesystem_not_found">A file has not been found.</string>
    <string name="publication_error_filesystem_forbidden">You are not allowed to access the file.</string>
    <string name="publication_error_filesystem_unexpected">An unexpected filesystem error occurred.</string>
    <string name="publication_error_filesystem_insufficient_space">There is not enough space left on the device.</string>
    <string name="publication_error_incorrect_credentials">Provided credentials were incorrect</string>
    <string name="publication_error_restricted">You are not allowed to open this publication</string>
    <string name="publication_error_out_of_memory">There is not enough memory on this device to open the publication.</string>
    <string name="publication_error_scheme_not_supported">Publication source is not supported.</string>
    <string name="publication_error_invalid_publication">Publication looks corrupted.</string>
    <string name="publication_error_unexpected">An unexpected error occurred.</string>
    <string name="seek_bar">Seek bar</string>
    <string name="go_backward_30_seconds">Go backward 30 seconds</string>
    <string name="play_or_pause">Play or pause</string>
    <string name="go_forward_30_seconds">Go forward 30 seconds</string>
</resources>